# Ais4103-Jetracer-ROS-AI-KIT

./: .gitignore  README.md  my_map.pgm
config/: waypoints.yaml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/jetracer/: LineFollowConfig.h  colorConfig.h
devel/include/ris_msgs/: Hello.h  PingPong.h  PingPongRequest.h  PingPongResponse.h
devel/lib/pkgconfig/: jetracer.pc  ris.pc  ris_msgs.pc
devel/lib/python2.7/dist-packages/jetracer/cfg/: LineFollowConfig.py  colorConfig.py
devel/lib/python2.7/dist-packages/ris_msgs/msg/: _Hello.py
devel/lib/python2.7/dist-packages/ris_msgs/srv/: _PingPong.py
devel/lib/ris/: hello_client  hello_publisher  hello_server  hello_subscriber  hello_world
devel/share/common-lisp/ros/ris_msgs/msg/: Hello.lisp  _package.lisp  _package_Hello.lisp  ris_msgs-msg.asd
devel/share/common-lisp/ros/ris_msgs/srv/: PingPong.lisp  _package.lisp  _package_PingPong.lisp  ris_msgs-srv.asd
devel/share/gennodejs/ros/ris_msgs/msg/: Hello.js  _index.js
devel/share/gennodejs/ros/ris_msgs/srv/: PingPong.js  _index.js
devel/share/jetracer/cmake/: jetracerConfig.cmake
devel/share/jetracer/docs/: LineFollowConfig-usage.dox  LineFollowConfig.dox  LineFollowConfig.wikidoc  colorConfig-usage.dox
devel/share/ris/cmake/: risConfig.cmake
devel/share/ris_msgs/cmake/: ris_msgs-msg-paths.cmake  ris_msgsConfig.cmake
devel/share/roseus/ros/ris_msgs/: manifest.l
devel/share/roseus/ros/ris_msgs/msg/: Hello.l
devel/share/roseus/ros/ris_msgs/srv/: PingPong.l
src/Dummy/: Dummy.cpp  Dummy.h
src/jetracer_ros/: CMakeLists.txt
src/jetracer_ros/config/ackman/: costmap_common_params.yaml
src/jetracer_ros/launch/: gmapping.launch  lidar.launch  master_hardware.launch
src/jetracer_ros/maps/: mymap.yaml
src/jetracer_ros/scripts/: face_detect.py
src/ris/: CMakeLists.txt  package.xml  plugin_description.xml
src/ris/Images/: dimentions.heic
src/ris/config/: amcl_params.yaml
src/ris/config/jetracer_ackman/: global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/ris/config/navigation/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_common_params.yaml  global_costmap_params.yaml  global_planner_astar.yaml  local_costmap_params.yaml  move_base_params.yaml  robot_footprint.yaml
src/ris/launch/: auto_mapping.launch  localization_only.launch  nav_localization_bringup.launch  navigation_astar.launch  navigation_bringup.launch  navigation_jetracer_car.launch  navigation_jetracer_car_pc.launch  navigation_navfn.launch  planning_only.launch  ris_vision.launch  slam_and_vision.launch  slam_with_vision.launch  youssef_slam.launch
src/ris/launch/includes/: amcl.launch.xml  initial_pose.launch.xml  map_server.launch.xml  move_base.launch.xml
src/ris/map/: aruco_waypoints.yaml  mymap.yaml
src/ris/scripts/: aruco_goal_navigator.py  aruco_localizer.py  aruco_mapper.py  aruco_processor.py  ris_cv_video.py  teleop_joy.py  waypoint_saver.py
src/ris/src/: CMakeLists.txt
src/ris/src/Navigation/: marker_graph_navigator.cpp
src/ris/src/graph_planner/: CMakeLists.txt  main.cpp
src/ris/src/grid_planner/: CMakeLists.txt  a_star_algo.cpp  main.cpp  plan_testRviz.cpp  plan_testRviz2.cpp
src/ris/src/hello_client/: main.cpp
src/ris/src/map_reader/: CMakeLists.txt  main.cpp
src/ris/src/navigation/: CMakeLists.txt  astar_global_planner.cpp  astar_global_planner.h  astar_global_planner_plugin.xml  initial_pose_sender.cpp  simple_goal_sender.cpp
src/ris/src/navigation/include/ris/navigation/: astar_global_planner.h  grid_utils.h  planner_utils.h  pose_utils.h
src/ris/src/navigation/src/: astar_global_planner.cpp  grid_utils.cpp  planner_utils.cpp  pose_utils.cpp
src/ris/src/slam/: CMakeLists.txt  auto_explorer.cpp  collision_guard.cpp  slam_manager.cpp  slam_remote_saver.cpp  youssef_slam.cpp
src/ris/src/tools/: initial_pose_sender.cpp  nav_status_monitor.cpp  pose_recorder.cpp  simple_goal_sender.cpp
src/slam/: CMakeLists.txt  package.xml
src/slam/launch/: hector_auto_slam.launch  load_map.launch
src/slam/src/: smart_slam.cpp
