<?xml version="1.0"?>
<package format="2">
  <name>slam_pkg</name>
  <version>0.0.0</version>
  <description>JetRacer SLAM pipeline with automatic map saving</description>

  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hector_slam</exec_depend>
</package>
